--- a/WebApplicationLogin/Content/Site.css
+++ b/WebApplicationLogin/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #E4FFCB;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,10 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
 }
