--- a/WebApplicationLogin/Views/_ViewStart.cshtml
+++ b/WebApplicationLogin/Views/_ViewStart.cshtml
@@ -1,26 +1,25 @@
-﻿@*@{
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }*@
-
-@{
-    if (this.User.IsInRole("Admin") || !this.User.Identity.IsAuthenticated)
+﻿    @if (this.User.IsInRole("Admin"))
     {
         Layout = "~/Views/Shared/AdminLayout.cshtml";
     }
-    if (this.User.IsInRole("Teacher") || !this.User.Identity.IsAuthenticated)
+
+    else if (this.User.IsInRole("Teacher"))
     {
         Layout = "~/Views/Shared/TeacherLayout.cshtml";
     }
-    if (this.User.IsInRole("Parent") || !this.User.Identity.IsAuthenticated)
+
+    else if (this.User.IsInRole("Parent"))
     {
         Layout = "~/Views/Shared/ParentLayout.cshtml";
     }
-    if (this.User.IsInRole("Student") || !this.User.Identity.IsAuthenticated)
+
+    else if (this.User.IsInRole("Student"))
     {
         Layout = "~/Views/Shared/ParentLayout.cshtml";
     }
+
     else
     {
         Layout = "~/Views/Shared/_Layout.cshtml";
     }
-}
+
